# BestPracticeDemo

./: .gitignore  README.md  Untitledkey  build.gradle  settings.gradle
Demo2/: build.gradle  settings.gradle
Demo2/advanceui/: build.gradle
Demo2/advanceui/src/main/: AndroidManifest.xml
Demo2/app/: build.gradle
Demo2/app/src/main/: AndroidManifest.xml
Demo2/architecturecomponent/: build.gradle
Demo2/architecturecomponent/src/main/: AndroidManifest.xml
Demo2/gradle/wrapper/: gradle-wrapper.properties
Demo2/network/: build.gradle
Demo2/network/src/main/: AndroidManifest.xml
Demo2/rview/src/main/: AndroidManifest.xml
Demo3/app/: build.gradle
Demo3/app/src/main/: AndroidManifest.xml
Demo3/gradle/wrapper/: gradle-wrapper.properties
UIStudy/: settings.gradle
UIStudy/app/: build.gradle
UIStudy/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
arcore/: build.gradle
arcore/src/main/: AndroidManifest.xml
djidemo/: build.gradle
djidemo/src/main/: AndroidManifest.xml
eventbus/: build.gradle
eventbus/src/main/: AndroidManifest.xml
handdetection/: build.gradle
handdetection/src/main/: AndroidManifest.xml
handdetection/src/main/assets/: coco_labels_list.txt
modulestudy/: build.gradle
modulestudy/src/main/: AndroidManifest.xml
opencv/: build.gradle
opencv/src/main/: AndroidManifest.xml
opengl/: build.gradle
opengl/release/: output.json
opengl/src/main/: AndroidManifest.xml
opengl/src/main/cpp/: CMakeLists.txt  native-lib.cpp
opengl/src/main/cpp/bzip/: decompress.c  randtable.c
pattens/: build.gradle
pattens/doc/: uml_study.puml
pattens/src/main/: AndroidManifest.xml
rxjavastudy/: build.gradle
rxjavastudy/src/main/: AndroidManifest.xml
ui/: build.gradle
ui/app/: build.gradle
ui/app/src/main/: AndroidManifest.xml
ui/gradle/wrapper/: gradle-wrapper.properties
ui/src/main/: AndroidManifest.xml
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
(+241 files in other folders)
